# c6021light

./: .gitmodules  README.md
.github/: copy-release-files.sh
.github/workflows/: linuxunittest.yml  platformio-default.yaml  platformio-uno.yaml  release.yaml  windowsunittest.yml
bluepill/hardware/: README.md  sym-lib-table
bluepill/housing/: README.md  c6021lightHousing - Top.stl
c6021light/: .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  apply-clang.sh  platformio.ini  stm32f103c8.ld
c6021light/design/: README.md  design.md  processEngineModification.plantum  routingEngine.plantuml  routingEngineClasses.plantuml  routingEngineMessageFlow.plantuml
c6021light/doc/: GeneralOperation.md  GettingStarted.md  RuntimeConfiguarionAndSerialConsole.md  c6021light_UserManual.md
c6021light/include/: FreeRTOSConfig.h  RR32Can_config.h  WProgram.h  c6021lightConfig.h
c6021light/lib/: freertos-downloader.sh
c6021light/lib/XpressNetMaster/: XpressNetMaster.cpp  XpressNetMaster.h  library.json
c6021light/lib/cliSupport/: cliSupport.cpp  cliSupport.h
c6021light/lib/freertossupport/: OsMutex.h  OsQueue.h  OsTask.h  OsTimer.cpp  OsTimer.h
c6021light/lib/microrl/: import-info.txt
c6021light/lib/microrl/src/: config.h
c6021light/lib/nimaltd-ee/: ee.c  ee.h  eeConfig.h  import-info.txt
c6021light/src/: ConsoleManager.cpp  ConsoleManager.h  DataModel.h  FaultHandler.cpp  IStatusIndicator.h  LocoNetTx.cpp  LocoNetTx.h  StartStopIndicator.cpp  StartStopIndicator.h  StationCbk.cpp  StationCbk.h  StatusIndicator.cpp  StatusIndicator.h  WProgram.cpp  main.cpp
c6021light/src/MarklinI2C/: Constants.h
c6021light/src/MarklinI2C/Messages/: AccessoryMsg.cpp  AccessoryMsg.h
c6021light/src/XpressNet/: XpressNetMaster.cpp  XpressNetMaster.h  XpressNetMsg.cpp  XpressNetMsg.h
c6021light/src/hal/: ArduinoUnoHal.cpp  ArduinoUnoHal.h  Debounce.h  HalBase.cpp  HalBase.h  Led.h  LibOpencm3Hal.cpp  LibOpencm3Hal.h  MarklinBusGPIOMap.h  stm32I2C.cpp  stm32I2C.h  stm32can.cpp  stm32can.h  stm32eepromEmulation.cpp  stm32eepromEmulation.h  stm32usart.cpp  stm32usart.h
c6021light/src/tasks/ConsoleTask/: ConsoleTask.cpp  ConsoleTask.h
c6021light/src/tasks/RoutingTask/: CANForwarder.cpp  CANForwarder.h  CanEngineDB.cpp  CanEngineDB.h  CanEngineDBStateMachine.h  I2CForwarder.cpp  I2CForwarder.h  LocoNetForwarder.cpp  LocoNetForwarder.h  LocoNetHelpers.cpp  LocoNetHelpers.h  LocoNetPrinter.cpp  LocoNetPrinter.h  LocoNetSlotServer.cpp  LocoNetSlotServer.h  RoutingForwarder.h  RoutingTask.cpp  RoutingTask.h  StateMachineBase.h  StopGoStateMachine.h  XpressNetForwarder.cpp  XpressNetForwarder.h
c6021light/test/: TestManual.md
c6021light/test/integration/: CanEngineDBRequest.cpp  EngineRouting.cpp  LnSwitchRequest.cpp  SlotServer.cpp  SlotServerProcessing.cpp  StatelessRouting.cpp  StopGoRequest.cpp
c6021light/test/mocks/: KeyboardMock.h  LocoNet.cpp  LocoNet.h  OsTask.h  OsTimer.h  RoutingForwarderMock.cpp  RoutingForwarderMock.h  RoutingTaskFixture.h  SequenceMaker.cpp  SequenceMaker.h  StatusIndicator.h  XpressNetMaster.cpp  XpressNetMaster.h
c6021light/test/unit/: AccessoryPacketTest.cpp  EmptyTest.cpp  I2CForwarderTest.cpp  SlotServer.cpp  VelocityConversion.cpp
